#154 Groups > Leader tab in Members list - search form spacing issue

--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2372,10 +2372,6 @@ body.no-js .single-item-header .js-self-profile-button {
   padding-top: 1em;
 }
 
-.single-item.group-members .item-body .filters {
-  margin-top: 0;
-}
-
 /**
 *-----------------------------------------
 * @subsection 5.2.1.1 - Management Settings Screens
